[resetpassword] Fixed alignment

--- a/BO-PYM/assets/css/resetpassword.css
+++ b/BO-PYM/assets/css/resetpassword.css
@@ -20,7 +20,6 @@ body{
 }
 
 .reset-password{
-    margin-left: 15px;
     border: 3px solid grey;
     padding: 6px 20px 6px 30px;
     text-align: center;
